--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ plugins:
   - jekyll-feed
   - jemoji
   - jekyll-include-cache
+  - jekyll-youtube
 
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
