Changed 3 files Created: _pages/timeline.md,_timelines/2023-08-23-Event.md Updated: _data/navigation.yml

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,5 +5,7 @@ main:
     url: "/"
   - title: "Archive"
     url: "/archive/"
+  - title: "Timeline"
+    url: "/timeline"
   - title: "About"
     url: "https://kaijunzhu.com"
