Updated: _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,10 @@ paginate_path: /page:num/
 include:
   - _pages
 
+collections:
+  timelines:
+    output: true
+
 # collections:
 #   splashs:
 #     output: true
